fix: hide log table scrollbar

--- a/app/src/assets/ui.less
+++ b/app/src/assets/ui.less
@@ -97,6 +97,10 @@
   }
 }
 
+.log-page [data-radix-scroll-area-scrollbar] {
+  display: none;
+}
+
 .thin-scrollbar {
   scrollbar-width: thin;
   -ms-overflow-style: none;
